[package]
name = "md_collab"
version = "0.1.0"
authors = ["tfachmann <fachmanntj@gmail.com>", "David Nelles <david.nelles@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
pulldown-cmark = { version = "0.7", default-features = false }
regex = "1.3"
lazy_static = "1.4"
